--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
   margin: 0;
@@ -53,90 +53,100 @@ header div img {
   width: 75px;
 }
 
-.title {
-  transform: translateZ(-1px) scale(5);
-  font-size: 40px;
-  color: #ffff;
-  text-align: center;
-  margin-top: 330px;
-}
-
-
-.parallax {
-  height: 100vh;
-  perspective: 1px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.parallax-layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform-origin: center;
-}
-
-.parallax-layer-back {
-  transform: translateZ(-2px) scale(3);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -2;
-}
-
-.parallax-layer-middle {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%) translateZ(-1px) scale(2);
-  font-size: 80px;
-  color: #fff;
-  font-weight: bold;
-  text-shadow: 2px 2px 38px rgba(255, 255, 255, 0.7);
-  z-index: 0;
-  pointer-events: none;
-}
-
-.parallax-layer-base {
-  position: relative;
-  z-index: 1;
-  
+.bg {
+  max-width: 100%;
 }
 
 .main {
   width: 100%;
+  position: relative;
 }
 
 .content-container {
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 330px;
 }
 
 .card {
   display: flex;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-top: 20px;
-  padding: 10px;
+  margin-top: 60px;
   border-radius: 20px;
 }
 
-.card-right{
+main .card:nth-child(2n) {
   flex-direction: row-reverse;
+}
+
+main .card:nth-child(5) {
+  margin-top: 200px;
+}
+
+.card-img {
+  display: block;
+  width: 300px;
+  height: auto;
 }
 
 .card-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   max-width: 800px;
-
 }
 
 .card .card-content h2 {
-  font-size: 25px;
+  font-size: 30px;
+}
+
+.card-text {
+  width: fit-content;
+  text-align: justify;
+  padding-bottom: 60px;
+  margin-top: 25px;
+  line-height: 25px;
+}
+
+.read-more {
+  text-decoration: none;
+  cursor: pointer;
+  color: orangered;
+}
+
+.read-more:hover {
+  text-decoration: underline;
+  font-weight: bold;
+  transition: ease-in 0.2s;
+}
+
+.title {
+  position: absolute;
+  text-transform: uppercase;
+  font-weight: 400;
+  top: 50%;
+  left: 40%;
+}
+
+.title::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 400px;
+  height: 2px;
+  background-color: #333;
+  top: 50%;
+  left: 120%;
+}
+
+.title::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 400px;
+  height: 2px;
+  background-color: #333;
+  top: 50%;
+  right: 120%;
 }
 
 .properties {
@@ -154,11 +164,11 @@ header div img {
 }
 
 .properties p:first-child {
-  background-color: #D6D5A8;
+  background-color: #d6d5a8;
 }
 
 .properties p:last-child {
-  background-color: #1B2430;
+  background-color: #1b2430;
   color: #fff;
 }
 
@@ -167,12 +177,161 @@ header div img {
   background-color: #816797;
 }
 
-.card-text {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;
-  white-space: normal;
+.footer-container {
+  background-color: #1b2430;
+  color: #c4c4c4;
+  padding: 40px 20px;
+  margin-top: 200px;
+  max-width: 100%;
 }
 
+.footer {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 0 auto;
+}
+
+.footer section {
+  text-align: center;
+}
+
+.footer section:not(:last-child) {
+  border-right: solid 2px #c4c4c4;
+}
+
+.footer p {
+  max-width: 1200px;
+  padding-top: 20px;
+  border-top: solid 2px #c4c4c4;
+  font-size: 14px;
+  text-align: center;
+}
+
+footer h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer ul li {
+  margin: 17px 150px;
+}
+
+footer ul li a {
+  color: #c4c4c4;
+  text-decoration: none;
+  font-size: 14px;
+  padding-top: 17px;
+}
+
+footer ul li a:hover {
+  text-decoration: underline;
+}
+
+/* Mobile styles */
+
+@media (max-width: 820px) {
+  header .menu-container div {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header nav ul {
+    flex-direction: column;
+    padding: 10px 0;
+  }
+
+  header nav a {
+    padding: 10px 16px;
+  }
+
+  .bg {
+    object-fit: cover;
+    height: auto;
+  }
+
+  .card {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  main .card:nth-child(2n) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-img {
+    width: 80%;
+    margin-bottom: 20px;
+  }
+
+  .card-content {
+    max-width: 100%;
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  .card-content h2 {
+    font-size: 20px;
+  }
+
+  div .properties {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    gap: 10px;
+  }
+
+  div .properties p {
+    font-size: 16px;
+    width: 45%;
+  }
+
+  .card-text {
+    text-align: justify;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .footer section {
+    min-width: auto;
+    border-right: none;
+  }
+
+  .footer section:not(:last-child) {
+    border-top: solid 2px #c4c4c4;
+    border-right: none;
+  }
+
+  .footer-content section {
+    border-top: solid 2px #c4c4c4;
+  }
+
+  .footer-content section h2 {
+    margin-top: 10px;
+  }
+
+  main .title {
+    top: 50%;
+    left: 28%;
+    font-size: 16px;
+  }
+}
