--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* --- TABLE OF STYLES --- */
+/* ---                 --- */
+/* HEADER                  */
+/* MAIN                    */
+/* FOOTER                  */
+/* MOBILE STYLES           */
 
 * {
   margin: 0;
@@ -14,6 +19,8 @@ html {
   flex-direction: column;
 }
 
+/* HEADER */
+
 header .menu-container {
   background-color: #1b2430;
 }
@@ -24,7 +31,7 @@ header .menu-container div {
   margin: auto;
   justify-content: space-between;
   align-items: center;
-  padding-left: 16px;
+  padding-left: 1rem;
 }
 
 header nav ul {
@@ -33,7 +40,7 @@ header nav ul {
 }
 
 header nav a {
-  padding: 41px 16px;
+  padding: 2.56rem 1rem;
   color: white;
   display: block;
   text-decoration: none;
@@ -57,6 +64,8 @@ header div img {
   max-width: 100%;
 }
 
+/* MAIN */
+
 .main {
   width: 100%;
   position: relative;
@@ -70,8 +79,8 @@ header div img {
 .card {
   display: flex;
   justify-content: space-between;
-  margin-top: 60px;
-  border-radius: 20px;
+  margin-top: 3.75rem;
+  border-radius: 1.25rem;
 }
 
 main .card:nth-child(2n) {
@@ -79,12 +88,12 @@ main .card:nth-child(2n) {
 }
 
 main .card:nth-child(5) {
-  margin-top: 200px;
+  margin-top: 12.5rem;
 }
 
 .card-img {
   display: block;
-  width: 300px;
+  width: 18.75rem;
   height: auto;
 }
 
@@ -92,19 +101,19 @@ main .card:nth-child(5) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 800px;
+  max-width: 50rem;
 }
 
 .card .card-content h2 {
-  font-size: 30px;
+  font-size: 1.87rem;
 }
 
 .card-text {
   width: fit-content;
   text-align: justify;
-  padding-bottom: 60px;
-  margin-top: 25px;
-  line-height: 25px;
+  padding-bottom: 3.75rem;
+  margin-top: 1.56rem;
+  line-height: 1.56rem;
 }
 
 .read-more {
@@ -142,8 +151,8 @@ main .card:nth-child(5) {
   position: absolute;
   content: "";
   display: block;
-  width: 400px;
-  height: 2px;
+  width: 25rem;
+  height: 0.12rem;
   background-color: #333;
   top: 50%;
   right: 120%;
@@ -151,16 +160,16 @@ main .card:nth-child(5) {
 
 .properties {
   display: flex;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 1.25rem;
+  margin-top: 1.25rem;
 }
 
 .properties p {
   width: fit-content;
-  border-radius: 10px;
-  padding: 12px 16px;
+  border-radius: 0.62rem;
+  padding: 0.75rem 1rem;
   text-align: center;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 .properties p:first-child {
@@ -177,11 +186,13 @@ main .card:nth-child(5) {
   background-color: #816797;
 }
 
+/* FOOTER*/
+
 .footer-container {
   background-color: #1b2430;
   color: #c4c4c4;
-  padding: 40px 20px;
-  margin-top: 200px;
+  padding: 2.5rem 1.25rem;
+  margin-top: 12.5rem;
   max-width: 100%;
 }
 
@@ -191,7 +202,7 @@ main .card:nth-child(5) {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 20px;
+  gap: 1.25rem;
   flex-wrap: wrap;
 }
 
@@ -212,16 +223,16 @@ main .card:nth-child(5) {
 
 .footer p {
   max-width: 1200px;
-  padding-top: 20px;
+  padding-top: 1.25rem;
   border-top: solid 2px #c4c4c4;
-  font-size: 14px;
+  font-size: 0.87rem;
   text-align: center;
 }
 
 footer h2 {
   font-family: "Roboto", sans-serif;
-  font-size: 30px;
-  margin-bottom: 10px;
+  font-size: 1.87rem;
+  margin-bottom: 0.62rem;
 }
 
 footer ul {
@@ -229,23 +240,23 @@ footer ul {
 }
 
 footer ul li {
-  margin: 17px 150px;
+  margin: 1.06rem 9.37rem;
 }
 
 footer ul li a {
   color: #c4c4c4;
   text-decoration: none;
-  font-size: 14px;
-  padding-top: 17px;
+  font-size: 0.87rem;
+  padding-top: 1.06rem;
 }
 
 footer ul li a:hover {
   text-decoration: underline;
 }
 
-/* Mobile styles */
+/* MOBILE STYLES */
 
-@media (max-width: 820px) {
+@media screen and (max-width: 820px) {
   header .menu-container div {
     flex-direction: column;
     align-items: center;
@@ -253,11 +264,12 @@ footer ul li a:hover {
 
   header nav ul {
     flex-direction: column;
-    padding: 10px 0;
+    align-items: center;
+    padding: 0.87rem 0;
   }
 
   header nav a {
-    padding: 10px 16px;
+    padding: 0.87rem 1rem;
   }
 
   .bg {
@@ -277,38 +289,40 @@ footer ul li a:hover {
 
   .card-img {
     width: 80%;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   .card-content {
     max-width: 100%;
-    padding: 0 20px;
+    padding: 0 1.25rem;
     text-align: center;
   }
 
   .card-content h2 {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   div .properties {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    gap: 10px;
+    gap: 0.62rem;
   }
 
   div .properties p {
-    font-size: 16px;
+    font-size: 1rem;
     width: 45%;
   }
 
   .card-text {
     text-align: justify;
+    font-size: 1.25rem;
+    line-height: 2rem;
   }
 
   .footer-content {
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
   }
 
   .footer section {
@@ -326,12 +340,12 @@ footer ul li a:hover {
   }
 
   .footer-content section h2 {
-    margin-top: 10px;
+    margin-top: 0.62rem;
   }
 
   main .title {
     top: 50%;
     left: 28%;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
